--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react",
-  "version": "0.0.0",
+  "name": "my-app",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@babel/runtime": "7.21.0",
@@ -31,7 +31,7 @@
     "react-router-dom": "6.8.1",
     "react-scripts": "5.0.1",
     "reactstrap": "9.1.6",
-    "sass": "^1.58.3",
+    "sass": "^1.62.1",
     "typescript": "4.9.5",
     "web-vitals": "3.1.1",
     "yup": "1.0.0"
@@ -44,5 +44,23 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
