--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@types/react": "18.0.28",
+    "@types/react-dom": "^16.8 || ^17.0 || ^18.0",
     "bootstrap": "5.2.3",
     "formik": "2.2.9",
     "material-table": "2.0.3",
@@ -26,12 +27,17 @@
     "react-dom": "18.2.0",
     "react-google-recaptcha": "2.1.0",
     "react-helmet": "6.1.0",
-    "react-helmet-async": "^1.3.0",
+    "react-helmet-async": "1.3.0",
+    "react-native": ">=0.59",
+    "react-redux": "^8.0.5",
     "react-router-bootstrap": "0.26.2",
     "react-router-dom": "6.8.1",
     "react-scripts": "5.0.1",
     "reactstrap": "9.1.6",
-    "sass": "^1.62.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^4.0.0",
+    "redux-thunk": "^2.4.2",
+    "sass": "1.62.1",
     "typescript": "4.9.5",
     "web-vitals": "3.1.1",
     "yup": "1.0.0"
